@@ -1,4 +1,8 @@
 20170510:
+	* ezthumb.h: EZOPT.suffix expands to 256
+	* ezgui.c: Fixed the bug which failed to save the suffix to the config file.
+
+20170510:
 	* configure.ac: added tests for	HAVE_AVFRAME_PKT_PTS, HAVE_AVFRAME_BEST_ETS,
 	HAVE_GD_USE_FONTCONFIG and HAVE_GD_IMAGE_GIFANIMATION
 	* ezthumb.h: EZOPT.img_format changed to integer type
